--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ic.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Crimson+Pro:wght@200&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,9 +30,9 @@
             <p><a href="#" class="link">Read more</a><span class="fa fa-arrow-right"></span> </p>
         </div>
         <div id="right">
-            <img src="interior-consultant-master/photo1.png" alt="Room" id="img1">
+            <img src="photo1.png" alt="Room" id="img1">
             <div id="profile">
-                <img src="interior-consultant-master/photo2.png" alt="profile-picture" id="img2">
+                <img src="photo2.png" alt="profile-picture" id="img2">
                 <p ><span>    Aliza Webber </span><br>
                 <span id="transparent"> Interior designer</span></p>
                 <p> <span>Designed in 2020 by</span><br>
